<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">KCollege</string>
    <string name="college">KCollege</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="drawer_item1">My Profile</string>
    <string name="drawer_item2">Emergency Call</string>
    <string name="drawer_item3">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="com_techhab_dialogloginactivity_ok_button">OK</string>
    <string name="com_techhab_loginview_log_out_button">Log out</string>
    <string name="com_techhab_loginview_log_in_button">Log in</string>
    <string name="com_techhab_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_techhab_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_techhab_loginview_log_out_action">Log out</string>
    <string name="com_techhab_loginview_cancel_action">Cancel</string>
    <string name="com_techhab_logo_content_description">College Logo</string>
    <string name="com_techhab_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_techhab_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_techhab_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_techhab_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_techhab_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_techhab_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_techhab_picker_done_button_text">Done</string>
    <string name="com_techhab_choose_friends">Choose Friends</string>
    <string name="com_techhab_nearby">Nearby</string>
    <string name="com_techhab_loading">Loading…</string>
    <string name="com_techhab_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_techhab_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_techhab_requesterror_web_login">Your account is locked. Please log into www.kzoo.edu to continue.</string>
    <string name="com_techhab_requesterror_relogin">Please log into this app again to reconnect your account.</string>
    <string name="com_techhab_requesterror_password_changed">Your password has changed. Please log into this app again to reconnect your account.</string>
    <string name="com_techhab_requesterror_reconnect">Please log into this app again to reconnect your account.</string>
    <string name="com_techhab_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="error_switching_screens">Error switching screens - Please try again</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="network_error">Please check your network connection</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="content_description">Content Description</string>
    <string name="main_menu_00">Academic</string>
    <string name="main_menu_01">Campus</string>
    <string name="main_menu_02">Dining</string>
    <string name="main_menu_10">Sports</string>
    <string name="main_menu_11">Events</string>
    <string name="main_menu_12">Map</string>
    <string name="image_description_name">Seung Yoon Hong 15\'</string>
    <string name="image_description_place">Venice, Italy</string>
    <string-array name="nav_drawer_items">
        <item>Emergency Call</item>
        <item>About</item>
        <item>Log Out</item>
    </string-array>
    <string-array name="nav_drawer_settings_support">
        <item>Settings</item>
        <item>Help &amp; feedback</item>
    </string-array>
    <string-array name="campus_info">
        <item>Facilities</item>
        <item>Cafeteria</item>
        <item>Academic Calender</item>
        <item>Security</item>
        <item>Grocery Info</item>
        <item>Campus Map</item>
    </string-array>
    <string-array name="cafeteria_value">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Day 3</item>
        <item>Day 4</item>
    </string-array>
    <string name="k_email">K Email</string>
    <string name="k_password">K Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="guest_in">CONTINUE AS GUEST</string>
    <string name="login">LOG IN</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_overflow">More</string>
    <string name="action_send">Send</string>
    <string name="action_reset_shared_prefs">Reset shared prefs</string>
    <string name="scroll_to_bottom">Scroll to bottom</string>
    <string name="title_buildings_select">Buildings</string>
    <string name="title_action_academic_buildings">Academic Buildings</string>
    <string name="title_action_residential_halls">Residential Halls</string>
    <string name="title_action_recreational_centers">Recreational Centers</string>
    <string name="title_action_offices">Offices</string>
    <string name="title_action_other">Other</string>
    <string name="title_action_show_all">Show All</string>
    <string name="title_activity_info">Campus Information</string>
    <string name="label_building_Hicks_Center">Hicks Center</string>
    <string name="map_it">MAP IT</string>
    <string name="read_more">READ MORE</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="label_cafeteria_contact">Contact Us:</string>
    <string name="label_cafeteria_phone">(517) 763-1377</string>
    <string name="label_cafeteria_richardson">Richardson Cafe</string>
    <string name="label_cafeteria_welles">Welles Dinning Hall</string>
    <string name="label_cafeteria_hours">Monday-Friday: 10:00am-12:00am\nSaturday: 10:00am-6:00pm\nSunday: 6:00pm-12am</string>
    <string name="label_cafeteria_bookClub"> The Book Cafe</string>
    <string name="label_cafeteria_bookClubHours">Monday-Thursday: 7:45am-12:30am\nFriday: 7:45am-6pm\nSaturday: 9:30am-6:00pm\nSunday: 11:30pm-12:30am</string>
    <string name="label_cafeteria_breakfast">BreakFast</string>
    <string name="label_cafeteria_lunch">Lunch</string>
    <string name="label_cafeteria_dinner">Dinner</string>
    <string name="label_grocery_walgreens">Walgreens</string>
    <string name="label_grocery_meijers">Meijers</string>
    <string name="label_grocery_farmersMarket">Farmers Market</string>
    <string name="label_grocery_hardingsMarkets">Hardings Markets</string>
    <string name="label_grocery_irvingMarket">Irving Market</string>
    <string name="label_grocery_laMexicanaMarket">La Mexicana Market</string>
    <string name="label_grocery_pacificRimFoods">Pacific Rim Foods</string>
    <string name="men">MEN\'S</string>
    <string name="women">WOMEN\'S</string>
    <string name="view_more">VIEW MORE</string>
    <string name="view_less">VIEW LESS</string>
    <string name="collapse_list">COLLAPSE LIST</string>
        <string name="game_in_progress">Game In Progress</string>
        <string name="upcoming_events_default_text">Upcoming</string>
        <string name="upcoming_events">Upcoming Events</string>
        <string name="upcoming_games">Upcoming Games</string>
        <string name="no_upcoming_events">No upcoming events</string>
        <string name="no_past_events">No past events</string>
        <string name="roster">Team Roster</string>
        <string name="head_coach">Head Coach</string>
        <string name="assistant_coaches">Assistant Coaches</string>
        <string name="student_assistants_managers">Student Assistants/Managers</string>
        <string name="captains">Captains</string>
        <string name="results">Results</string>
        <string name="athlete_no.">No.</string>
        <string name="athlete_name">Name</string>
        <string name="athlete_position">Pos.</string>
        <string name="date">Date</string>
        <string name="opponent">Opponent</string>
        <string name="result">Result</string>
        <string name="mens_baseball">http://hornets.kzoo.edu/sports/bsb/2014-15/schedule?print=rss</string>
        <string name="womens_softball">http://hornets.kzoo.edu/sports/sball/2014-15/schedule?print=rss</string>
        <string name="mens_basketball">http://hornets.kzoo.edu/sports/mbkb/2014-15/schedule?print=rss</string>
        <string name="womens_basketball">http://hornets.kzoo.edu/sports/wbkb/2014-15/schedule?print=rss</string>
        <string name="mens_cross_country">http://hornets.kzoo.edu/sports/mxc/2014-15/schedule?print=rss</string>
        <string name="womens_cross_country">http://hornets.kzoo.edu/sports/wxc/2014-15/schedule?print=rss</string>
        <string name="mens_football">http://hornets.kzoo.edu/sports/fball/2014-15/schedule?print=rss</string>
        <string name="mens_golf">http://hornets.kzoo.edu/sports/mgolf/2014-15/schedule?print=rss</string>
        <string name="womens_golf">http://hornets.kzoo.edu/sports/wgolf/2014-15/schedule?print=rss</string>
        <string name="mens_soccer">http://hornets.kzoo.edu/sports/msoc/2014-15/schedule?print=rss</string>
        <string name="womens_soccer">http://hornets.kzoo.edu/sports/wsoc/2014-15/schedule?print=rss</string>
        <string name="mens_swim_dive">http://hornets.kzoo.edu/sports/mswimdive/2014-15/schedule?print=rss</string>
        <string name="womens_swim_dive">http://hornets.kzoo.edu/sports/wswimdive/2014-15/schedule?print=rss</string>
        <string name="mens_tennis">http://hornets.kzoo.edu/sports/mten/2014-15/schedule?print=rss</string>
        <string name="womens_tennis">http://hornets.kzoo.edu/sports/wten/2014-15/schedule?print=rss</string>
        <string name="womens_volleyball">http://hornets.kzoo.edu/sports/wvball/2014-15/schedule?print=rss</string>
        <string name="womens_lacrosse">http://hornets.kzoo.edu/sports/wlax/2014-15/schedule?print=rss</string>
        <string name="term_prompt">Term</string>
        <string-array name="term_array">
            <item>Winter 2015</item>
            <item>Fall 2014</item>
            <item>Spring 2014</item>
        </string-array>
        <string-array name="category_array">
            <item>Fine Arts</item>
            <item>Humanities</item>
            <item>Interdisciplinary</item>
            <item>Modern/Classical Lang. &amp; Lit.</item>
            <item>Natural Sciences &amp; Math.</item>
            <item>Physical Education</item>
            <item>Social Sciences</item>
        </string-array>
        <string name="subject_prompt">Subject</string>
        <string name="course_level_prompt">Course Level</string>
</resources>