<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techhab.collegeapp.HomeFragment">
    <!--android:background="@drawable/example_home_background"-->

    <LinearLayout
        android:id="@+id/image_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:gravity="end|center_vertical"
        android:padding="8dp"
        android:orientation="vertical" >

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_description_name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_description_place"
            android:textColor="@color/white"
            android:textSize="16sp" />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:minHeight="200dp"
        android:animateLayoutChanges="true" >

        <!--<ImageView
            android:id="@+id/main_expand"
            android:contentDescription="@string/content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:padding="8dp"
            android:src="@drawable/main_expand_less"
            android:clickable="true" />

        <ScrollView
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >-->

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/eighty_percent_opacity"
                android:padding="5dp"
                android:orientation="vertical"
                android:weightSum="2" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/MainMenuItem"
                            android:id="@+id/main_menu_00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_school_white_36dp"
                            android:text="@string/main_menu_00" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/MainMenuItem"
                            android:id="@+id/main_menu_01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_bank_white_36dp"
                            android:text="@string/main_menu_01" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/MainMenuItem"
                            android:id="@+id/main_menu_02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_silverware_white_36dp"
                            android:text="@string/main_menu_02" />

                    </LinearLayout>

                </TableRow>


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:paddingTop="28dp"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/MainMenuItem"
                            android:id="@+id/main_menu_10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_trophy_variant_white_36dp"
                            android:text="@string/main_menu_10" />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/MainMenuItem"
                            android:id="@+id/main_menu_11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_calendar_white_36dp"
                            android:text="@string/main_menu_11" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/MainMenuItem"
                            android:id="@+id/main_menu_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_map_white_36dp"
                            android:text="@string/main_menu_12" />

                    </LinearLayout>

                </TableRow>

            </TableLayout>
        <!--</ScrollView>-->

    </LinearLayout>

</FrameLayout>